--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/amz-prep-logo-resized.png" />
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/amz-prep-logo-resized.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/amz-prep-logo-resized.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/amz-prep-logo-resized.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AMZ Prep Shipping Analytics</title>
   </head>
