--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/amz-prep-logo-resized.png" />
+    <link rel="icon" type="image/png" href="/amz-prep-bw-favicon-logo.png" />
     <!-- Favicon -->
-    <link rel="icon" type="image/png" sizes="32x32" href="/amz-prep-logo-resized.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/amz-prep-logo-resized.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/amz-prep-logo-resized.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/amz-prep-bw-favicon-logo.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/amz-prep-bw-favicon-logo.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/amz-prep-bw-favicon-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AMZ Prep Shipping Analytics</title>
   </head>
